# FDDG

./: .gitignore  README.md  datasetsGo.sh  datasetsGo2.sh  datasetsGo3.sh  env.yaml  large-files.txt  main.py  oldpyproject  organize_images_orignal.py  organize_images_sensitive_scene.py  organize_images_sensitive_weather_all.py  outputs.txt  paths-to-remove.txt  pip_requirements.txt  pyproject.toml  requirements.txt  run1.sbatch  runTrans.sbatch  slurm-7416393.out
bdd100kdatapreprocessing/: organize_images.py  organize_images_orignal.py
fddg/: FairFace.py  debug_fairface_output.txt  debug_output.txt  debug_training.py  debug_webapp_training.py  grid_search.py  package-lock.json  plot_gird_bar.py  plot_grid_results.py  plot_metrics.py  summary.csv
fddg/algorithm_grid_results/: extract_last_lines.py  improtresults_CVS.py  sort_summary.py  visualize_results.py
fddg/debug_webapp_output/: err.txt  out.txt  results.jsonl
fddg/debug_webapp_output/logs/tensorboard/: events.out.tfevents.1745789910.c1109a-s17.ufhpc  events.out.tfevents.1745790096.c1109a-s17.ufhpc  events.out.tfevents.1745790391.c1109a-s17.ufhpc  events.out.tfevents.1745790565.c1109a-s17.ufhpc  events.out.tfevents.1745790803.c1109a-s17.ufhpc  events.out.tfevents.1745791837.c1109a-s17.ufhpc  events.out.tfevents.1745791995.c1109a-s17.ufhpc  events.out.tfevents.1745792199.c1109a-s17.ufhpc  events.out.tfevents.1745792412.c1109a-s17.ufhpc  events.out.tfevents.1745793142.c1109a-s17.ufhpc  events.out.tfevents.1745793204.c1109a-s17.ufhpc  events.out.tfevents.1745793744.c1109a-s17.ufhpc  events.out.tfevents.1745794144.c1109a-s17.ufhpc  (+4 more)
fddg/domainbed/: algorithms.py  dataset_new.py  datasets.py  hparams_registry.py
fddg/domainbed/lib/: fast_data_loader.py  misc.py
fddg/domainbed/munit/: datasets.py  rename_checkpoints.py  train_munit.py
fddg/domainbed/scripts/: predict.py  train.py  train_with_panel.py
fddg/fairness_panel/: reset.sh  set_env_vars.sh  start_a100_bash.sh  start_panel_backend.sh  start_panel_frontend.sh  start_training_controller.sh
fddg/fairness_panel/backend/: app.py  config.json  simulate_training.py  train_controller.py  training_state.json  utils.py
fddg/fairness_panel/config/: config.json  training_state.json
fddg/fairness_panel/frontend/: index.html  package.json
fddg/grid_search_results/ERM_lr_1e-05_batch_size_32_weight_decay_0.0_mlp_width_32_mlp_depth_2_mlp_dropout_0.0/: out.txt  results.jsonl
fddg/grid_search_results/ERM_lr_1e-05_batch_size_32_weight_decay_0.0_mlp_width_32_mlp_depth_2_mlp_dropout_0.1/: out.txt  results.jsonl
fddg/grid_search_results/ERM_lr_1e-05_batch_size_32_weight_decay_0.0_mlp_width_32_mlp_depth_3_mlp_dropout_0.0/: out.txt  results.jsonl
fddg/grid_search_results/ERM_lr_1e-05_batch_size_32_weight_decay_0.0_mlp_width_32_mlp_depth_3_mlp_dropout_0.1/: err.txt  out.txt  results.jsonl
fddg/grid_search_results/ERM_lr_1e-05_bs_16_wd_0.0/: err.txt  out.txt  results.jsonl
fddg/grid_search_results/ERM_lr_5e-05_bs_32_wd_0.0/: err.txt  out.txt  results.jsonl
fddg/grid_search_results/ERM_lr_5e-05_bs_32_wd_0.0001/: out.txt  results.jsonl
fddg/train_output/: checkinfro.py  err.txt  results.jsonl  tensorboard_results.csv  tensorboard_results.txt
newenv/: pyvenv.cfg
preprocessing/: CCMNIST.py  FairFace.py  NYPD_preprecessing.py  YFCC.py
preprocessing/bdd100kdatapreprocessing/: organize_images_sensitive_skin.py  organize_images_sensitive_weather_binary.py
(+32 files in other folders)
