[project]
name = "fddg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adversarial-robustness-toolbox==1.6.0",
    "ase==3.20.1",
    "backcall==0.2.0",
    "certifi==2020.12.5",
    "chardet==4.0.0",
    "click==7.1.2",
    "cloudpickle==1.6.0",
    "cma==3.0.3",
    "configparser==5.0.2",
    "cvxpy==1.1.12",
    "cycler==0.10.0",
    "cytoolz==0.11.0",
    "decorator==4.4.2",
    "docker-pycreds>=0.4.0",
    "eagerpy==0.29.0",
    "ecos==2.0.8",
    "ffmpeg-python==0.2.0",
    "filelock==3.0.12",
    "foolbox==3.3.1",
    "fsspec==0.9.0",
    "future==0.18.2",
    "gdown==3.12.2",
    "gitdb==4.0.7",
    "gitpython==3.1.14",
    "googledrivedownloader==0.4",
    "idna==2.10",
    "imageio==2.9.0",
    "ipykernel==5.3.4",
    "ipython==7.22.0",
    "ipython-genutils>=0.2.0",
    "isodate==0.6.0",
    "jedi==0.17.0",
    "jinja2==2.11.2",
    "joblib==1.0.0",
    "jupyter-client==6.1.12",
    "jupyter-core==4.7.1",
    "kiwisolver==1.3.1",
    "littleutils==0.2.2",
    "llvmlite==0.35.0",
    "locket==0.2.1",
    "markupsafe==1.1.1",
    "matplotlib==3.3.3",
    "mypy==0.812",
    "networkx==2.5",
    "ninja==1.10.2",
    "numba==0.52.0",
    "numpy==1.19.2",
    "ogb==1.3.0",
    "olefile==0.46",
    "onnx==1.9.0",
    "osqp==0.6.2",
    "outdated==0.2.0",
    "pandas==1.2.0",
    "parso==0.8.2",
    "partd==1.2.0",
    "pathtools==0.1.2",
    "patsy==0.5.1",
    "pexpect==4.8.0",
    "pickleshare==0.7.5",
    "pillow==8.1.0",
    "pip==21.1.1",
    "promise==2.3",
    "prompt-toolkit==3.0.17",
    "protobuf==3.15.8",
    "psutil==5.8.0",
    "ptyprocess==0.7.0",
    "pydub==0.25.1",
    "pygments==2.8.1",
    "pyparsing==2.4.7",
    "pysocks==1.7.1",
    "python-dateutil==2.8.1",
    "python-louvain==0.15",
    "pytz==2020.5",
    "pywavelets==1.1.1",
    "pyyaml==5.3.1",
    "rdflib==5.0.0",
    "requests==2.25.1",
    "resampy==0.2.2",
    "scikit-image==0.18.1",
    "scikit-learn==0.23.2",
    "scipy>=1.5.4",
    "seaborn==0.11.1",
    "setuptools==51.1.2",
    "shortuuid==1.0.1",
    "six==1.15.0",
    "smmap==4.0.0",
    "statsmodels==0.12.2",
    "subprocess32==3.5.4",
    "tensorboardx==2.1",
    "threadpoolctl==2.1.0",
    "tifffile==2020.10.1",
    "toolz==0.11.1",
    "torch>=2.6.0",
    "tornado==6.1",
    "tqdm==4.56.0",
    "traitlets==5.0.5",
    "typed-ast==1.4.3",
    "typing-extensions>=4.10.0",
    "urllib3==1.26.2",
    "wandb==0.10.28",
    "wcwidth==0.2.5",
    "wheel==0.36.2",
    "wilds>=2.0.0",
    "zstd==1.4.5",
]
